--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,10 @@ h1{
 
 .footer{
     position: absolute;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     bottom: 0;
     width: 100%;
 }
