--- a/styles.css
+++ b/styles.css
@@ -61,3 +61,11 @@ h1{
     bottom: 0;
     width: 100%;
 }
+
+.Logga{
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
