--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,12 +5,17 @@
     border: 0;
 }
 body {
-    background-color: grey;
+/*    background-color: grey;*/
     position: relative;
     min-height: 100vh;
     top: 0;
     left: 0;
     color: black;
+}
+button {
+
+    margin: 2px;
+
 }
 a {
     text-decoration: none;
