--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,7 +98,7 @@ main button{
 .kundkorg{
     padding-bottom: 20px;
 }
-.kundkorg-produkt{
+.produkt{
     width: 80%;
     max-width: 300px;
     padding-bottom: 20px;
