--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,6 +53,8 @@ li a {
     display: flex;
     justify-content: space-evenly;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
 }
 
 li a:hover{
@@ -60,6 +62,7 @@ li a:hover{
 }
 
 h1{
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
 
@@ -130,9 +133,12 @@ main button{
 .top {
     display: flex;
     justify-content: space-evenly;
+    margin-bottom: 10px;
+    border: black solid 2px;
 }
 
 .topicon {
     height: 30px;
     width: 30px;
 }
+
