--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,6 +73,8 @@ h1{
     justify-content: space-evenly;
     bottom: 0;
     width: 100%;
+    border: black solid 2px;
+    margin-top: 30px;
 }
 
 .Logga{
@@ -121,12 +123,12 @@ main button{
     display: flex;
     flex-direction: column;
     justify-items: center;
-
+    padding: 40px;
 }
 
 .footericons {
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
 }
 
 .top {
@@ -146,3 +148,13 @@ nav {
     border: black solid 2px;
 }
 
+.footer .Validate{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    right: 45%;
+}
+/*Brytningspunkt för skärmar som är mindre än 600 pixlar*/
+@media screen and (max-width: 600px) {
+
+}
