--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,15 +20,15 @@ button {
 
 a {
     text-decoration: none;
-    color: blue;
+    color: #000;
 }
 
 a:visited{
-    color: blue;
+    color: #000;
 }
 
 a:active{
-    color:blue;
+    color:#000;
 }
 
 
@@ -52,11 +52,11 @@ ul{
 li a {
     display: flex;
     justify-content: space-evenly;
-    color: white;
+    /*color: white;*/
 }
 
 li a:hover{
-    color:white;
+    /*color:white;*/
 }
 
 h1{
