--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,13 +51,6 @@ ul{
 li a {
     display: flex;
     justify-content: space-evenly;
-<<<<<<< HEAD
-    /*color: white;*/
-}
-
-li a:hover{
-    /*color:white;*/
-=======
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
@@ -65,7 +58,6 @@ li a:hover{
 
 li a:hover{
     color:black;
->>>>>>> 0ee09ef75e9e80dccf3fe49f908f96d1e4c6a5a8
 }
 
 h1{
@@ -159,7 +151,7 @@ nav {
 
 .footer .Validate{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
 }
 /*Brytningspunkt för skärmar som är mindre än 600 pixlar*/
