--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,13 +51,6 @@ ul{
 li a {
     display: flex;
     justify-content: space-evenly;
-<<<<<<< HEAD
-    /*color: white;*/
-}
-
-li a:hover{
-    /*color:white;*/
-=======
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
@@ -65,7 +58,6 @@ li a:hover{
 
 li a:hover{
     color:black;
->>>>>>> 0ee09ef75e9e80dccf3fe49f908f96d1e4c6a5a8
 }
 
 h1{
@@ -128,10 +120,18 @@ main button{
 }
 
 .imagebox{
+    /*
     display: flex;
     flex-direction: column;
     justify-items: center;
     padding: 40px;
+    */
+    min-height: 300px;
+    min-width: 300px;
+    overflow: hidden;
+    position: relative;
+    justify-content: center;
+
 }
 
 .footericons {
