--- a/styles/styles.css
+++ b/styles/styles.css
@@ -169,7 +169,11 @@ nav {
         }
 
         .topicons {
-            height: 20px;
-            width: 20px;
+            height: 15px;
+            width: 15px;
+        }
+
+        nav ul{
+            flex-direction: column;
         }
 }
