--- a/styles/styles.css
+++ b/styles/styles.css
@@ -117,6 +117,7 @@ main button{
 .produkt{
     width: 33%;
     max-width: 300px;
+    min-width: 300px;
     padding-bottom: 50px;
     justify-content: center;
 }
@@ -126,6 +127,7 @@ main button{
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    margin-top: 10px;
 }
 
 .produktsida {
@@ -220,4 +222,5 @@ nav {
         nav ul{
             flex-direction: column;
         }
+
 }
