--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,7 +66,7 @@ h1{
 }
 
 .footer{
-    position: absolute;
+    position: relative;
     display: flex;
     flex-direction: row; /*@media*/
     flex-wrap: wrap;
@@ -74,6 +74,7 @@ h1{
     bottom: 0;
     width: 100%;
     border: black solid 2px;
+    margin-top: 20px;
 
 }
 
