--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,7 +51,7 @@ ul{
 li a {
     display: flex;
     justify-content: space-evenly;
-    color: white;
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
 }
