--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,18 +65,7 @@ h1{
     text-align: center;
 }
 
-.footer{
-    position: relative;
-    display: flex;
-    flex-direction: row; /*@media*/
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    bottom: 0;
-    width: 100%;
-    border: black solid 2px;
-    margin-top: 20px;
 
-}
 
 .Logga{
     display: flex;
@@ -117,13 +106,13 @@ main button{
 }
 
 .produkt{
-    width: 33.333%;
+    width: 33%;
     min-width: 300px;
-    padding-bottom: 50px;
+    padding:10px 0px 10px;
 /*    justify-content: center;
-    justify-self: center;
-    background-color: antiquewhite;*/
-    margin: auto;
+    justify-self: center;*/
+    background-color: rgb(241, 241, 241);
+    margin: 5px auto 5px;
 
 }
 .produkt img{
@@ -139,7 +128,8 @@ main button{
     display: flex;
     flex-flow: row wrap;
     justify-items: center;
-    margin:0 auto 0;    
+    margin:0 auto 50px;
+    padding-bottom: 50px;    
 /*    background-color: aquamarine;*/
 }
 .produkt-namn{
@@ -182,7 +172,7 @@ main button{
     margin-left: 0;
     left: 0;
     top:50%;
-    
+    z-index: 100;
 }
 
 #right{
@@ -194,6 +184,18 @@ main button{
     z-index: 100;
 }
 /*--------------------------------------------------*/
+
+.footer{
+    position: absolute;
+    display: flex;
+    flex-direction: row; /*@media*/
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    bottom: 0;
+    width: 100%;
+    border: black solid 2px;
+}
+
 .footericons {
     width: 30px;
     height: 30px;
