--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,7 +107,7 @@ main button{
 
 .produkt{
     width: 33%;
-    min-width: 300px;
+    min-width: 360px;
     padding:10px 15px 15px 10px;
 /*    justify-content: center;
     justify-self: center;*/
@@ -205,7 +205,7 @@ main button{
 .top {
     display: flex;
     justify-content: space-evenly;
-    border: black solid 2px;
+/*    border: black solid 2px;*/
 }
 
 .topicon {
@@ -215,7 +215,9 @@ main button{
 
 nav {
     margin-top: 10px;
-    border: black solid 2px;
+    border-color: black solid;
+    border-bottom: 2px;
+    border-style: solid;
 }
 
 /*Kod för valideringsikonerna för CSS och HTML*/
