--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,6 +28,11 @@ a:active{
 li{
     list-style-type: none;
 }
+.header{
+    position: sticky;
+    top: 0;
+    z-index: 101;
+}
 nav ul{
     width: 100%;
     display: flex;
@@ -207,9 +212,9 @@ main button{
 .top {
     display: flex;
     justify-content: space-evenly;
-    top: 0;
+/*    top: 0;*/
     width: 100%;
-    position: sticky;
+/*    position: sticky;*/
     background-color: rgb(241, 241, 241);
 /*    border: black solid 2px;*/
 }
