--- a/styles/styles.css
+++ b/styles/styles.css
@@ -224,7 +224,7 @@ main button{
 }
 nav {
     margin-top: 10px;
-    border-color: black solid;
+    border-color: black;
     background-color: rgb(241, 241, 241);
     border-bottom: 2px;
     border-style: solid;
