--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,7 @@
+:root{
+    --text-color: black;
+    --background-color: white;
+}
 *{
     box-sizing: border-box;
     margin: 0;
@@ -10,20 +14,21 @@ body {
     min-height: 100vh;
     top: 0;
     left: 0;
-    color: black;
+    background-color:  var(--background-color);
+    color: var(--text-color);
 }
 button {
     margin: 2px;
 }
 a {
     text-decoration: none;
-    color: #000;
+    color: var(--text-color);
 }
 a:visited{
-    color: #000;
+    color: var(--text-color);
 }
 a:active{
-    color:#000;
+    color: var(--text-color);
 }
 li{
     list-style-type: none;
@@ -143,7 +148,7 @@ h1{
     transform: translateX(-50%);
     min-width: 200px;
     left: 50%;
-    background-color: #FFF
+    background-color: var(--background-color);
 }
 /*--------------------------------------------------*/
 .footer{
@@ -154,7 +159,7 @@ h1{
     justify-content: space-evenly;
     bottom: 0;
     width: 100%;
-    border-top: 2px solid #000;
+    border-top: 2px solid var(--text-color);;
     padding-top: 2px;
     margin-top: 10px;
 }
@@ -166,7 +171,7 @@ h1{
     display: flex;
     justify-content: space-evenly;
     width: 100%;
-    background-color: #FFF;
+    background-color: var(--background-color);
 }
 .topicon {
     height: 30px;
